# learn-cpp-through-projects

./: .gitignore  .gitmodules  README.md  conanfile.py
live-transport-network-monitor/: CMakeLists.txt
live-transport-network-monitor/network-monitor/: CMakeLists.txt  conanfile.py
live-transport-network-monitor/network-monitor/include/network-monitor/: file_downloader.h  websocket_client.h
live-transport-network-monitor/network-monitor/src/: file_downloader.cc  main.cc  websocket_client.cc  websocket_client.h
live-transport-network-monitor/network-monitor/tests/: file_downloader.cc  websocket_client.cc
live-transport-network-monitor/src/: main.cc
network-monitor/src/: file_downloader.cc  websocket_client.cc
network-monitor/tests/: network-layout.json
test-ninja-and-cmake/: CMakeLists.txt  test.cc
tests/: file_downloader.cc
